[project]
name = "chains"
version = "0.0.1"
requires-python = "~=3.11.0"
dependencies = [
  "dotenv>=0.9.9",
  "langchain==0.0.352",
  "langchain-openai==0.0.5",
  "python-dotenv==1.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.14.5",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
